<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CadastrarProdutoFragment">

    <EditText
        android:id="@+id/etNome"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="182dp"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/nome_item"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etQuantidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etQuantidade"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/quantidade_item"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etPreco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNome" />

    <EditText
        android:id="@+id/etPreco"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:hint="@string/preco_item"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etQuantidade" />

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="68dp"
        android:text="@string/cadastrar_item"
        app:layout_constraintBottom_toTopOf="@+id/tvRespCadastrarItem"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPreco" />

    <TextView
        android:id="@+id/tvRespCadastrarItem"
        android:layout_width="191dp"
        android:layout_height="0dp"
        android:layout_marginBottom="175dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCadastrar" />

</androidx.constraintlayout.widget.ConstraintLayout>